// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Goal snapshot It should render the whole Goal component correctly 1`] = `
<View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#E9F7FD",
          "borderColor": "#d6d7da",
          "borderRadius": 7,
          "borderWidth": 0.5,
          "marginBottom": 10,
          "overflow": "hidden",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "black",
              "fontSize": 16,
              "lineHeight": 24,
              "textDecorationLine": "none",
            }
          }
        >
          Løp 1000m
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(96,100,109, 1)",
              "lineHeight": 24,
            }
          }
        >
          Mot opp ved lerkenda...
           
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(96,100,109, 1)",
              "fontSize": 13,
            }
          }
        >
          Oct 3, 11:32
        </Text>
      </View>
    </View>
  </View>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onModalHide={[Function]}
    onRequestClose={[Function]}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 0,
          "height": 1334,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
        }
      }
    />
    <View
      hideModalContentWhileAnimating={false}
      onModalHide={[Function]}
      pointerEvents="box-none"
      scrollOffset={0}
      scrollOffsetMax={0}
      scrollTo={null}
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
          "margin": 37.5,
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        }
      }
      supportedOrientations={
        Array [
          "portrait",
          "landscape",
        ]
      }
      swipeThreshold={100}
    >
      <View
        style={
          Object {
            "backgroundColor": "white",
            "borderColor": "#d6d7da",
            "borderRadius": 7,
            "borderWidth": 0.5,
            "marginHorizontal": 20,
            "maxHeight": 300,
            "minHeight": 200,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "black",
                "fontSize": 17,
                "lineHeight": 24,
                "paddingLeft": 10,
                "paddingRight": 5,
                "paddingTop": 15,
              }
            }
          >
            Løp 1000m
          </Text>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            />
          </View>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(96,100,109, 1)",
              "fontSize": 16,
              "lineHeight": 24,
              "marginTop": -30,
              "paddingLeft": 10,
            }
          }
        >
          Mot opp ved lerkendal stadion og løp med Anders
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "flex-end",
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                />
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(96,100,109, 1)",
                      "fontSize": 16,
                      "lineHeight": 24,
                      "paddingLeft": 7,
                      "paddingRight": 5,
                    }
                  }
                >
                  Completed
                </Text>
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(96,100,109, 1)",
                  "fontSize": 12,
                  "marginTop": 5,
                }
              }
            >
              Oct 3, 11:32
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`Goal snapshot should shallowrender Goal component correctly 1`] = `
<Component>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Component
      style={
        Object {
          "backgroundColor": "#E9F7FD",
          "borderColor": "#d6d7da",
          "borderRadius": 7,
          "borderWidth": 0.5,
          "marginBottom": 10,
          "overflow": "hidden",
          "padding": 10,
        }
      }
    >
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "black",
              "fontSize": 16,
              "lineHeight": 24,
              "textDecorationLine": "none",
            }
          }
        >
          Løp 1000m
        </Text>
        <Icon
          allowFontScaling={false}
          name="ios-information-circle-outline"
          size={16}
          style={
            Object {
              "color": "rgba(96,100,109, 1)",
            }
          }
        />
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(96,100,109, 1)",
              "lineHeight": 24,
            }
          }
        >
          Mot opp ved lerkenda...
           
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "rgba(96,100,109, 1)",
              "fontSize": 13,
            }
          }
        >
          Oct 3, 11:32
        </Text>
      </Component>
    </Component>
  </TouchableOpacity>
  <ReactNativeModal
    animationIn="slideInUp"
    animationInTiming={300}
    animationOut="slideOutDown"
    animationOutTiming={300}
    avoidKeyboard={false}
    backdropColor="black"
    backdropOpacity={0.7}
    backdropTransitionInTiming={300}
    backdropTransitionOutTiming={300}
    hideModalContentWhileAnimating={false}
    isVisible={false}
    onBackButtonPress={[Function]}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalShow={[Function]}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    useNativeDriver={false}
  >
    <Component
      style={
        Object {
          "backgroundColor": "white",
          "borderColor": "#d6d7da",
          "borderRadius": 7,
          "borderWidth": 0.5,
          "marginHorizontal": 20,
          "maxHeight": 300,
          "minHeight": 200,
        }
      }
    >
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "black",
              "fontSize": 17,
              "lineHeight": 24,
              "paddingLeft": 10,
              "paddingRight": 5,
              "paddingTop": 15,
            }
          }
        >
          Løp 1000m
        </Text>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Icon
            allowFontScaling={false}
            name="ios-close-circle-outline"
            size={20}
            style={
              Object {
                "color": "black",
                "padding": 10,
              }
            }
          />
        </TouchableOpacity>
      </Component>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(96,100,109, 1)",
            "fontSize": 16,
            "lineHeight": 24,
            "marginTop": -30,
            "paddingLeft": 10,
          }
        }
      >
        Mot opp ved lerkendal stadion og løp med Anders
      </Text>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-end",
            "padding": 10,
          }
        }
      >
        <Component
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Component
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="ios-radio-button-off"
                size={16}
                style={
                  Object {
                    "color": "rgba(96,100,109, 1)",
                    "marginTop": 3,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(96,100,109, 1)",
                    "fontSize": 16,
                    "lineHeight": 24,
                    "paddingLeft": 7,
                    "paddingRight": 5,
                  }
                }
              >
                Completed
              </Text>
            </Component>
          </TouchableOpacity>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(96,100,109, 1)",
                "fontSize": 12,
                "marginTop": 5,
              }
            }
          >
            Oct 3, 11:32
          </Text>
        </Component>
      </Component>
    </Component>
  </ReactNativeModal>
</Component>
`;
